# CAPcore-python

./: .gitignore  .prospector.yaml  Makefile  README.md  pyproject.toml  requirements.txt
src/CAPcore/: DictLoggedDict.py  Files.py  LoggedDict.py  LoggedValue.py  Misc.py  Python.py  Web.py
tests/CAPcore/: test_DictData.py  test_DictLoggedDict.py  test_Misc.py  test_loggedDict.py  test_loggedValue.py
tests/utils/: test_DictLoggedDict.py  test_Misc.py  test_Web.py  test_loggedDict.py  test_loggedValue.py
