#https://packaging.python.org/en/latest/tutorials/packaging-projects/
[project]
name = "CAPcore-python"
version = "0.1.0"
authors = [
    { name="Example Author", email="author@example.com" },
]
description = "Support functions for CAP projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "MechanicalSoup>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "PyYAML>=6.0.2"
]
classifiers = [
    "License :: CAP license",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
